ajout de cartes et correction de leur alignement dans la grille

--- a/persona-memory-game/src/App.scss
+++ b/persona-memory-game/src/App.scss
@@ -4,7 +4,7 @@
 
 .game {
   position: absolute;
-  left: 20%;
+  left: 15%;
 }
 
 h1 {
