--- a/persona-memory-game/src/components/GridCard/gridcard.scss
+++ b/persona-memory-game/src/components/GridCard/gridcard.scss
@@ -3,7 +3,6 @@
 
     & img {
         width: 80%;
-        display: block;
         border: 2px solid white;
         border-radius: 6px;
     }
@@ -14,7 +13,7 @@
         margin-top: 40px;
         padding: 1em;
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
         grid-gap: 20px;
         border: 2px solid #FFFF81;
         border-radius: 20px;
